[package]
name = "acml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"

axum = "0.6.20"
httpc-test = "0.1.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = ["fs"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
mime_guess = "2.0.4"
include_dir = "0.7.3"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
